# es-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: client.rs  format.rs  main.rs
src/commands/: aliases.rs  count.rs  datastreams.rs  esql.rs  fields.rs  get.rs  histogram.rs  kql.rs  list.rs  mod.rs  search.rs  stats.rs  tail.rs  values.rs
